Modify training hyper param

--- a/data/coop.cfg
+++ b/data/coop.cfg
@@ -31,8 +31,8 @@ episode_timeout = 4200
 available_buttons =
     {
         ATTACK
-        SPEED
-        STRAFE
+        #SPEED
+        #STRAFE
 
         MOVE_RIGHT
         MOVE_LEFT
